<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fav_base_layout"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal|center_vertical"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.blackfrogweb.popularmovies.MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:id="@+id/secondaryLayout">

        <TextView
            android:id="@+id/label_field"
            android:layout_gravity="left"
            android:textSize="25sp"
            android:fontFamily="sans-serif-condensed"
            android:textColor="@color/primaryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:layout_marginBottom="10dp"/>

        <RadioGroup
            android:id="@+id/rb_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_most_popular"
                android:text="@string/popularity"
                android:textColor="@color/secondaryText"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:id="@+id/rb_rating"
                android:text="@string/rating"
                android:textColor="@color/secondaryText"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>

    </LinearLayout>
</LinearLayout>