<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.blackfrogweb.popularmovies.DetailActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                        android:text="@string/movie_title"
                        android:fontFamily="sans-serif-condensed"
                        android:id="@+id/movie_title"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp" />

                    <TextView
                        android:text="@string/movie_date_text"
                        android:id="@+id/release_date"
                        android:textColor="@color/secondaryText"
                        android:textAlignment="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@android:style/TextAppearance.Small"/>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:layout_marginStart="5dp"
                            android:layout_marginEnd="5dp"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_horizontal">

                            <TextView
                                android:text="@string/movie_score_text"
                                android:textColor="@color/secondaryText"
                                android:padding="10dp"
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Medium"/>

                            <TextView
                                android:id="@+id/score"
                                android:textColor="@color/secondaryText"
                                android:text="@string/movie_score_number"
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:paddingStart="0dp"
                                android:paddingEnd="0dp"
                                android:textAlignment="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@android:style/TextAppearance.Medium"/>

                            <ImageView
                                android:paddingTop="10dp"
                                android:paddingBottom="10dp"
                                android:paddingStart="10dp"
                                android:src="@drawable/star"
                                android:layout_height="match_parent"
                                android:layout_width="wrap_content"
                                android:elevation="0dp"
                                android:baselineAlignBottom="false"
                                android:cropToPadding="false"
                                android:duplicateParentState="false"
                                android:scaleType="fitStart"
                                android:paddingEnd="10dp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/plot"
                android:paddingTop="10dp"
                android:textColor="@color/secondaryText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
